Updated Web Form but need to redo customer registration page.

--- a/FFR/PresentationWebForms/PresentationWebForms.csproj
+++ b/FFR/PresentationWebForms/PresentationWebForms.csproj
@@ -189,6 +189,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.slider.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
+    <Content Include="CustomerRegistration.aspx" />
     <Content Include="ItemList.aspx" />
     <Content Include="Images\accent.png" />
     <Content Include="Images\bullet.png" />
@@ -294,6 +295,13 @@
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
     </Compile>
+    <Compile Include="CustomerRegistration.aspx.cs">
+      <DependentUpon>CustomerRegistration.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CustomerRegistration.aspx.designer.cs">
+      <DependentUpon>CustomerRegistration.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ItemList.aspx.cs">
       <DependentUpon>ItemList.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -356,6 +364,10 @@
     <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj">
       <Project>{ba78a764-5ef6-4ffe-a821-1a06134cd9e5}</Project>
       <Name>BusinessLayer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FFR\DAL.csproj">
+      <Project>{1202d22f-da29-4854-9be5-d37492f54065}</Project>
+      <Name>DAL</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
