--- a/FFR/PresentationWebForms/Web.config
+++ b/FFR/PresentationWebForms/Web.config
@@ -11,7 +11,10 @@
     <add name="DefaultConnection"
            connectionString="Data Source=.;Initial Catalog=FFR;Integrated Security=SSPI"
            providerName="System.Data.SqlClient" />
-    
+    <add name="FFREntities" 
+         connectionString="metadata=res://*/FFR.csdl|res://*/FFR.ssdl|res://*/FFR.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=FFR;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" 
+         providerName="System.Data.EntityClient"/>
+
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
