--- a/FFR/FFR/DAL.csproj
+++ b/FFR/FFR/DAL.csproj
@@ -75,6 +75,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>FFR.edmx</DependentUpon>
     </Compile>
+    <Compile Include="ItemCategory.cs">
+      <DependentUpon>FFR.tt</DependentUpon>
+    </Compile>
     <Compile Include="Service\CRUDRepositoryConcreteFactory.cs" />
     <Compile Include="Item.cs">
       <DependentUpon>FFR.tt</DependentUpon>
@@ -89,8 +92,13 @@
     </Compile>
     <Compile Include="Service\CustomeInterfaceTestNotUsedr.cs" />
     <Compile Include="Service\EmployeeInterfaceTestNotUsed.cs" />
+    <Compile Include="WebUserTable.cs">
+      <DependentUpon>FFR.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="FFR.edmx.sql" />
+  </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="FFR.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
@@ -99,6 +107,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
+    <None Include="ClassDiagram1.cd" />
     <None Include="FFR.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>FFR.edmx</DependentUpon>
@@ -116,9 +125,6 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="FFR.edmx.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
