--- a/FFR/PresentationWebForms/PresentationWebForms.csproj
+++ b/FFR/PresentationWebForms/PresentationWebForms.csproj
@@ -319,9 +319,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\ItemCategory.cs" />
     <Compile Include="Models\ItemContext.cs" />
-    <Compile Include="Models\ItemInitializer.cs" />
+    <Compile Include="Models\DataInitializer.cs" />
+    <Compile Include="Models\SalesHeader.cs" />
+    <Compile Include="Models\SalesItem.cs" />
+    <Compile Include="Models\WebUserTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
