Building data from initializer on first call, woohoo!

--- a/FFR/PresentationWebForms/PresentationWebForms.csproj
+++ b/FFR/PresentationWebForms/PresentationWebForms.csproj
@@ -190,6 +190,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="CustomerRegistration.aspx" />
+    <Content Include="ItemDetails.aspx" />
     <Content Include="ItemList.aspx" />
     <Content Include="Images\accent.png" />
     <Content Include="Images\bullet.png" />
@@ -301,6 +302,13 @@
     </Compile>
     <Compile Include="CustomerRegistration.aspx.designer.cs">
       <DependentUpon>CustomerRegistration.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ItemDetails.aspx.cs">
+      <DependentUpon>ItemDetails.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ItemDetails.aspx.designer.cs">
+      <DependentUpon>ItemDetails.aspx</DependentUpon>
     </Compile>
     <Compile Include="ItemList.aspx.cs">
       <DependentUpon>ItemList.aspx</DependentUpon>
