Added items to show up for Categories

--- a/FFR/PresentationWebForms/Web.config
+++ b/FFR/PresentationWebForms/Web.config
@@ -9,7 +9,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection"
-           connectionString="Data Source=.;Initial Catalog=FFR;Integrated Security=SSPI"
+           connectionString="metadata=res://*/FFR.csdl|res://*/FFR.ssdl|res://*/FFR.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=FFR;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
            providerName="System.Data.SqlClient" />
     <add name="FFREntities" 
          connectionString="metadata=res://*/FFR.csdl|res://*/FFR.ssdl|res://*/FFR.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=FFR;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" 
